fix: add item function adjusted

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,1 +1,87 @@
-/*# sourceMappingURL=style.css.map */
+.main-wrapper {
+  display: block;
+  width: 500px;
+  margin-inline: auto;
+}
+
+.h3 {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.header {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+}
+.header__img {
+  width: 100%;
+}
+.header__more-info {
+  font-family: fantasy;
+}
+
+@media (max-width: 768px) {
+  .header {
+    text-align: center;
+  }
+}
+.add {
+  margin-top: 20px;
+  display: flex;
+}
+.add__input-text {
+  width: 318px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+  flex-grow: 1;
+}
+.add__input-submit {
+  text-decoration: none;
+  border: none;
+  background: none;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+}
+.add__input-submit:hover {
+  color: #3a3A3a;
+}
+
+.input-style {
+  width: 318px;
+}
+
+*,
+*:before,
+*:after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
+}/*# sourceMappingURL=style.css.map */
